--- a/etc/php-fpm/php-fpm.ini
+++ b/etc/php-fpm/php-fpm.ini
@@ -140,4 +140,5 @@
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
 ;  - /usr/local otherwise
+expose_php = Off
 include=etc/php-fpm.d/*.conf
