--- a/etc/nginx/conf.d/default.conf
+++ b/etc/nginx/conf.d/default.conf
@@ -5,7 +5,7 @@ server {
 
     server_name    localhost;
 
-    root    /var/www/default;
+    root    /var/www;
     index   index.php;
 
     ssl_certificate     /etc/nginx/ssl/localhost.crt;
