--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -13,7 +13,7 @@ services:
       - ./etc/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./etc/nginx/conf.d:/etc/nginx/conf.d
       - ./etc/nginx/ssl:/etc/nginx/ssl
-      - ./wwwroot:/var/www
+      - ./www:/var/www
     environment:
       ENABLE_CRONTAB: "true"
       TZ: ${TZ}
@@ -26,7 +26,7 @@ services:
       - ./etc/php-fpm/php-fpm.ini:/usr/local/etc/php-fpm.ini
       - ./etc/php-fpm/php.ini-production:/usr/local/etc/php/php.ini
       - ./etc/php-fpm/crontabs:/etc/crontabs
-      - ./wwwroot:/var/www
+      - ./www:/var/www
     environment:
       ENABLE_CRONTAB: "true"
       TZ: ${TZ}
